# oceans-fleetguard-demo

./: .env.example  .gitignore  .pre-commit-config.yaml  .worktreeinclude  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md
.claude/: settings.json
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/alerts/: __init__.py  history.py
backend/app/api/: __init__.py  auth.py  fleet_service.py  ratelimit.py  routes.py  schemas.py  security.py  stream.py
backend/app/detection/: __init__.py  engine.py  geo.py  models.py  rules.py
backend/app/mock/: __init__.py  generator.py
backend/app/notify/: __init__.py  webhook.py
backend/app/observability/: __init__.py  logging.py  middleware.py  principal.py  ready.py  request_id.py
backend/app/sources/: __init__.py  base.py  mock_source.py
backend/app/tools/: __init__.py  gen_auth_users.py
backend/app/traccar/: __init__.py  client.py  connect.py  normalize.py  source.py  stream_source.py
backend/tests/: test_config.py  test_health.py
backend/tests/alerts/: test_history.py
backend/tests/api/: test_auth.py  test_fleet_service.py  test_ratelimit.py  test_routes.py  test_security.py  test_stream.py
backend/tests/detection/: test_engine.py  test_geo.py  test_rules.py
backend/tests/mock/: test_generator.py
backend/tests/notify/: test_webhook.py
backend/tests/observability/: test_logging.py  test_middleware.py  test_principal.py  test_ready.py
backend/tests/sources/: test_mock_source.py
(+77 files in other folders)
